--- a/src/templates/nav.html
+++ b/src/templates/nav.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="{% url 'home' %}">Project name</a>
           <a class="navbar-brand" href="#">Contact US</a>
           <a class="navbar-brand" href="#">About US</a>
         </div>
