--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -22,6 +22,9 @@
     <!-- java script -->
     {% include 'javascript.html' %}
 
+    {% block style %}
+    {% endblock %}
+
   </head>
 
   <body>
