--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -23,6 +23,7 @@
 {% endblock %}
 
 {% block  content %}
+<!--
      <div class="row">
         <div class="col-md-4">
           <h2>Heading00</h2>
@@ -40,4 +41,11 @@
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
       </div>
+   -->
+ <form method="POST" action="{% url 'home'%}"> {% csrf_token %}
+
+     {{ form.as_p }}
+    <input type="submit" class="btn btn-success">
+
+ </form>
 {% endblock %}
